[package]
name = "tone-clone"
version = "0.1.0"
edition = "2021"
description = "Scrape your real writing into a local SQLite database so AI agents can match your voice"
license = "MIT"

[dependencies]
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
dirs = "6"
include_dir = "0.7"
moosicbox_json_utils = { git = "https://github.com/MoosicBox/MoosicBox", default-features = false, features = [
  "database",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
switchy_async = { git = "https://github.com/MoosicBox/MoosicBox", default-features = false, features = [
  "tokio",
] }
switchy_database = { git = "https://github.com/MoosicBox/MoosicBox", default-features = false, features = [
  "sqlite-rusqlite",
  "schema",
] }
switchy_database_connection = { git = "https://github.com/MoosicBox/MoosicBox", default-features = false, features = [
  "sqlite-rusqlite",
] }
switchy_schema = { git = "https://github.com/MoosicBox/MoosicBox", default-features = false, features = [
  "embedded",
] }
thiserror = "2"
tokio = { version = "1", features = ["full"] }
